--- a/popup/popup.html
+++ b/popup/popup.html
@@ -12,11 +12,11 @@ body {min-width:400px;min-height:310px;}
 
 <body>
 
-<h5 class="bg-warning mb-2 pl-2 pb-1"><strong>FreeAngel Addmefast Bot - 0.0.1</strong></h5>
+<h5 class="bg-warning mb-2 pl-2 pb-1"><strong>FreeAngel Addmefast Bot - 0.0.2</strong></h5>
 <div class="container">
 	<div class="border pt-2 mb-2">
 		<ul>
-			<li>goto <a href="https://www.addmefast.com/" target="_blank">Addmefast</a>, <a href="https://www.tiktok.com/" target="_blank">Tiktok</a>, <a href="https://www.instagram.com/" target="_blank">instagram</a> and login</li>
+			<li>goto <a href="https://www.addmefast.com/" target="_blank">Addmefast</a>, <a href="https://www.tiktok.com/" target="_blank">Tiktok</a>, <a href="https://www.instagram.com/" target="_blank">instagram</a>, <a href="https://www.facebook.com/" target="_blank">Facebook</a> and login</li>
 			<li>click start button, reload if nothing happen</li>
 		</ul>
 	</div>
@@ -47,7 +47,19 @@ body {min-width:400px;min-height:310px;}
 				<label for="igfollow">Instagram Follow</label>
 		</div>
 	</div>
-		
+
+	<div class="row m-1">
+		<div class="col">
+			<input class="input-sm" type="checkbox" id="fbpostlike" name="fbpostlike" value="1" checked>
+				<label for="fbpostlike">Facebook Post Like</label>
+		</div>
+
+		<div class="col">
+			<input class="input-sm" type="checkbox" id="fblike" name="fblike" value="1" checked>
+				<label for="fblike">Facebook Like</label>
+		</div>
+	</div>
+	
 	<div class="row m-1">
 		<div class="col">
 			Max Click Per Type:
