--- a/popup/popup.html
+++ b/popup/popup.html
@@ -84,8 +84,8 @@ body {min-width:400px;min-height:310px;}
 	</div>
 	
 	<!-- <a href="https://www.youtube.com/watch?v=AUcy9a6TDpw" target="_blank"><small>Youtube Tutorial</small></a></br /> -->
-	<a href="https://www.youtube.com/watch?v=yVFAYxv3ZT4" target="_blank">How to use and demo</a><br />
-	<a href="https://www.youtube.com/c/freeangelz?sub_confirmation=1" target="_blank">My Youtube Channel</a><br />
+	<a href="https://www.youtube.com/watch?v=_DTZEEoTzZk" target="_blank">How to use and demo</a><br />
+	<a href="https://www.youtube.com/channel/UCqRqvw9n7Lrh79x3dRDOkDg" target="_blank">My Youtube Channel</a><br />
 	<br /><br />
 </div>
 </body>
