--- a/popup/popup.html
+++ b/popup/popup.html
@@ -12,7 +12,7 @@ body {min-width:400px;min-height:310px;}
 
 <body>
 
-<h5 class="bg-warning mb-2 pl-2 pb-1"><strong>FreeAngel Addmefast Bot - 0.0.3</strong></h5>
+<h5 class="bg-warning mb-2 pl-2 pb-1"><strong>FreeAngel Addmefast Bot - 0.0.4</strong></h5>
 <div class="container">
 	<div class="border pt-2 mb-2">
 		<ul>
@@ -86,6 +86,8 @@ body {min-width:400px;min-height:310px;}
 	<!-- <a href="https://www.youtube.com/watch?v=AUcy9a6TDpw" target="_blank"><small>Youtube Tutorial</small></a></br /> -->
 	<a href="https://www.youtube.com/watch?v=_DTZEEoTzZk" target="_blank">How to use and demo</a><br />
 	<a href="https://www.youtube.com/channel/UCqRqvw9n7Lrh79x3dRDOkDg" target="_blank">My Youtube Channel</a><br />
+	<a href="https://github.com/frxangelz/addmefast" target="_blank">Addmefast bot On Github</a><br />
+	
 	<br /><br />
 </div>
 </body>
