add twitter like and follow

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,17 +6,17 @@
 <link href="theme.css" rel="stylesheet">
 <script src="bwcore.js"></script>
 <style>
-body {min-width:400px;min-height:310px;}
+body {min-width:400px;min-height:380px;}
 </style>
 </head>
 
 <body>
 
-<h5 class="bg-warning mb-2 pl-2 pb-1"><strong>FreeAngel Addmefast Bot - 0.0.4</strong></h5>
+<h5 class="bg-warning mb-2 pl-2 pb-1"><strong>FreeAngel Addmefast Bot - 0.0.5</strong></h5>
 <div class="container">
 	<div class="border pt-2 mb-2">
 		<ul>
-			<li>goto <a href="https://www.addmefast.com/" target="_blank">Addmefast</a>, <a href="https://www.tiktok.com/" target="_blank">Tiktok</a>, <a href="https://www.instagram.com/" target="_blank">instagram</a>, <a href="https://www.facebook.com/" target="_blank">Facebook</a> and login</li>
+			<li>goto <a href="https://www.addmefast.com/" target="_blank">Addmefast</a>, <a href="https://www.tiktok.com/" target="_blank">Tiktok</a>, <a href="https://www.instagram.com/" target="_blank">instagram</a>, <a href="https://www.facebook.com/" target="_blank">Facebook</a>, <a href="https://www.twitter.com/" target="_blank">Twitter</a> and login</li>
 			<li>click start button, reload if nothing happen</li>
 		</ul>
 	</div>
@@ -62,6 +62,18 @@ body {min-width:400px;min-height:310px;}
 	
 	<div class="row m-1">
 		<div class="col">
+			<input class="input-sm" type="checkbox" id="twitterfollow" name="twitterfollow" value="1" checked>
+				<label for="twitterfollow">Twitter Follow</label>
+		</div>
+
+		<div class="col">
+			<input class="input-sm" type="checkbox" id="twitterlike" name="twitterlike" value="1" checked>
+				<label for="twitterlike">Twitter Like</label>
+		</div>
+	</div>
+		
+	<div class="row m-1">
+		<div class="col">
 			Max Click Per Type:
 			<input class="form-control input-sm" type="number" id="maxclick" value="75">
 		</div>
@@ -84,7 +96,7 @@ body {min-width:400px;min-height:310px;}
 	</div>
 	
 	<!-- <a href="https://www.youtube.com/watch?v=AUcy9a6TDpw" target="_blank"><small>Youtube Tutorial</small></a></br /> -->
-	<a href="https://www.youtube.com/watch?v=_DTZEEoTzZk" target="_blank">How to use and demo</a><br />
+	<a href="https://www.youtube.com/watch?v=_DTZEEoTzZk" target="_blank">How to use and demo (check for updates here)</a><br />
 	<a href="https://www.youtube.com/channel/UCqRqvw9n7Lrh79x3dRDOkDg" target="_blank">My Youtube Channel</a><br />
 	<a href="https://github.com/frxangelz/addmefast" target="_blank">Addmefast bot On Github</a><br />
 	
