--- a/popup/popup.html
+++ b/popup/popup.html
@@ -12,11 +12,12 @@ body {min-width:400px;min-height:380px;}
 
 <body>
 
-<h5 class="bg-warning mb-2 pl-2 pb-1"><strong>FreeAngel Addmefast Bot - 0.0.6</strong></h5>
+<h5 class="bg-warning mb-2 pl-2 pb-1"><strong>FreeAngel Addmefast Bot - 0.0.7</strong></h5>
 <div class="container">
 	<div class="border pt-2 mb-2">
 		<ul>
-			<li>goto <a href="https://www.addmefast.com/" target="_blank">Addmefast</a>, <a href="https://www.tiktok.com/" target="_blank">Tiktok</a>, <a href="https://www.instagram.com/" target="_blank">instagram</a>, <a href="https://www.facebook.com/" target="_blank">Facebook</a>, <a href="https://www.twitter.com/" target="_blank">Twitter</a> and login</li>
+<!--			<li>goto <a href="https://www.addmefast.com/" target="_blank">Addmefast</a>, <a href="https://www.tiktok.com/" target="_blank">Tiktok</a>, <a href="https://www.instagram.com/" target="_blank">instagram</a>, <a href="https://www.facebook.com/" target="_blank">Facebook</a>, <a href="https://www.twitter.com/" target="_blank">Twitter</a> and login</li> -->
+			<li>goto <a href="https://www.addmefast.com/" target="_blank">Addmefast</a>, and all your social media accounts that will be used to earn points and login</li>
 			<li>click start button, reload if nothing happen</li>
 		</ul>
 	</div>
@@ -69,6 +70,30 @@ body {min-width:400px;min-height:380px;}
 		<div class="col">
 			<input class="input-sm" type="checkbox" id="twitterlike" name="twitterlike" value="1" checked>
 				<label for="twitterlike">Twitter Like</label>
+		</div>
+	</div>
+
+	<div class="row m-1">
+		<div class="col">
+			<input class="input-sm" type="checkbox" id="ytsub" name="ytsub" value="1" checked>
+				<label for="ytsub">YT Subscribe</label>
+		</div>
+
+		<div class="col">
+			<input class="input-sm" type="checkbox" id="ytlike" name="ytlike" value="1" checked>
+				<label for="ytlike">YT Like</label>
+		</div>
+	</div>
+
+	<div class="row m-1">
+		<div class="col">
+			<input class="input-sm" type="checkbox" id="scfollow" name="scfollow" value="1" checked>
+				<label for="scfollow">Soundcloud Follow</label>
+		</div>
+
+		<div class="col">
+			<input class="input-sm" type="checkbox" id="sclike" name="sclike" value="1" checked>
+				<label for="sclike">Soundcloud Like</label>
 		</div>
 	</div>
 		
